syntax = "proto3";

import "google/protobuf/empty.proto";

package rpc;
option go_package = "rpc/proto";

message RecordID {
  string id = 1;
}

message UserCreds {
  string login = 1;
  string password = 2;
}

enum MessageType {
  TypeLoginAndPassword = 0;
  TypeFile = 1;
  TypeText = 2;
  TypeCreditCard = 3;
}

message Record {
  string id = 1;
  string user_id = 2;
  MessageType type = 3;
  string metadata = 4;
  bytes stored_data = 5;
  string keyhint = 6;
}

message Token {
  string token = 1;
}

message RecordsList {
  repeated Record records = 1;
}

service Gokeeper {
  rpc Login(UserCreds) returns (Token);
  rpc Register(UserCreds) returns (Token);
  rpc GetRecord(RecordID) returns (Record);
  rpc GetRecordsInfo(google.protobuf.Empty) returns (RecordsList);
  rpc CreateRecord(Record) returns (google.protobuf.Empty);
  rpc DeleteRecord(RecordID) returns (google.protobuf.Empty);
}


